# embedding-wasm-simple

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.c
sample_app/: CMakeLists.txt  build.sh  main.c
